--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@ document.addEventListener("DOMContentLoaded", () => {
       width: skin3dCanvas.clientWidth || 300,
       height: skin3dCanvas.clientHeight || 380,
       zoom: 0.9
+      <canvas id="skinCanvas" width="64" height="64" style="display:none;"></canvas>
     });
     viewer.autoRotate = true;
   } catch (err) {
