--- a/index.html
+++ b/index.html
@@ -1,10 +1,69 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8" />
+<title>Probending Wardrobe</title>
+<style>
+  body { font-family: Arial; background:#111; color:white; margin:0; padding:20px; }
+  .container { max-width:900px; margin:auto; }
+  .row { display:flex; gap:20px; margin-top:20px; }
+  .column { flex:1; }
+  button, .outfit-btn {
+    padding:10px 15px; margin:5px 0; cursor:pointer; background:#333; border:none; color:white;
+  }
+  .outfit-btn.active, .toggle-btn.active { background:#008cff; }
+</style>
+<script src="https://unpkg.com/skinview3d@3.0.0/dist/skinview3d.min.js"></script>
+</head>
+
+<body>
+<div class="container">
+  <h1>Probending Wardrobe</h1>
+
+  <!-- LOAD SKIN -->
+  <div>
+    <input type="file" id="skinFile" />
+    <input type="text" id="usernameInput" placeholder="Enter Minecraft username" />
+    <button id="loadUsernameBtn">Load Username Skin</button>
+  </div>
+
+  <!-- MODEL TOGGLE -->
+  <div>
+    <button class="toggle-btn active" data-model="default">Steve Model</button>
+    <button class="toggle-btn" data-model="slim">Slim Model</button>
+  </div>
+
+  <!-- OUTFITS -->
+  <h3>Choose Outfit</h3>
+  <div>
+    <button class="outfit-btn" data-outfit="outfits/red_team.png">Red Team</button>
+    <button class="outfit-btn" data-outfit="outfits/blue_team.png">Blue Team</button>
+    <button class="outfit-btn" data-outfit="outfits/red_slim.png">Red Slim</button>
+    <button class="outfit-btn" data-outfit="outfits/blue_slim.png">Blue Slim</button>
+  </div>
+
+  <!-- VIEWER & STATUS -->
+  <div class="row">
+    <div class="column">
+      <canvas id="skin3d" width="300" height="380"></canvas>
+
+      <!-- REQUIRED HIDDEN CANVAS (THIS WAS MISSING!) -->
+      <canvas id="skinCanvas" width="64" height="64" style="display:none;"></canvas>
+
+      <p id="statusText">Load a skin to begin.</p>
+      <button id="downloadBtn" disabled>Download Skin</button>
+    </div>
+  </div>
+</div>
+
+<!-- YOUR FULL SCRIPT (ALREADY WORKING) -->
 <script>
 document.addEventListener("DOMContentLoaded", () => {
   console.log("Probending Wardrobe – Base Outer-Layer Wipe Build Loaded");
 
   const canvas = document.getElementById("skinCanvas");
   if (!canvas) {
-    console.error("ERROR: #skinCanvas element not found. Make sure <canvas id='skinCanvas'> exists in your HTML.");
+    console.error("ERROR: #skinCanvas element not found.");
     return;
   }
   const ctx = canvas.getContext("2d");
@@ -29,7 +88,6 @@ document.addEventListener("DOMContentLoaded", () => {
       width: skin3dCanvas.clientWidth || 300,
       height: skin3dCanvas.clientHeight || 380,
       zoom: 0.9
-      <canvas id="skinCanvas" width="64" height="64" style="display:none;"></canvas>
     });
     viewer.autoRotate = true;
   } catch (err) {
@@ -40,25 +98,16 @@ document.addEventListener("DOMContentLoaded", () => {
 
   // --- REMOVE torso / legs / arms (base + outer layer) ---
   function clearOuterLayer() {
-    // BODY (base + outer)
     ctx.clearRect(16, 16, 24, 32);
-
-    // RIGHT ARM (base + outer)
     ctx.clearRect(40, 16, 16, 32);
-
-    // LEFT ARM (base + outer)
     ctx.clearRect(32, 48, 16, 16);
     ctx.clearRect(48, 48, 16, 16);
-
-    // RIGHT LEG (base + outer)
     ctx.clearRect(0, 16, 16, 32);
-
-    // LEFT LEG (base + outer)
     ctx.clearRect(16, 48, 16, 16);
     ctx.clearRect(0, 48, 16, 16);
   }
 
-  // --- RENDER CANVAS ---
+  // --- RENDER ---
   function renderCanvas() {
     if (!baseSkinImg) return;
 
@@ -66,105 +115,76 @@ document.addEventListener("DOMContentLoaded", () => {
     canvas.height = 64;
 
     ctx.clearRect(0, 0, 64, 64);
-
-    // 1) Draw base skin
     ctx.drawImage(baseSkinImg, 0, 0);
 
-    // 2) Remove torso/arms/legs
     clearOuterLayer();
 
-    // 3) Draw outfit
     if (outfitImg) ctx.drawImage(outfitImg, 0, 0);
 
-    // 4) Update 3D viewer
     viewer.loadSkin(canvas.toDataURL("image/png"), { model: currentModel });
 
-    // 5) Update UI
-    if (downloadBtn) downloadBtn.disabled = false;
-    if (statusText) statusText.textContent = "Outfit applied — ready to download!";
+    downloadBtn.disabled = false;
+    statusText.textContent = "Outfit applied — ready to download!";
   }
 
-  // --- FILE UPLOAD ---
-  const fileInput = document.getElementById("skinFile");
-  if (fileInput) {
-    fileInput.addEventListener("change", (e) => {
-      const file = e.target.files[0];
-      if (!file) return;
+  // --- UPLOAD FILE ---
+  document.getElementById("skinFile")?.addEventListener("change", (e) => {
+    const file = e.target.files[0];
+    if (!file) return;
 
-      const reader = new FileReader();
-      reader.onload = (ev) => {
-        const img = new Image();
-        img.onload = () => {
-          baseSkinImg = img;
-          if (statusText) statusText.textContent = "Skin loaded — choose an outfit.";
-          renderCanvas();
-        };
-        img.src = ev.target.result;
-      };
-      reader.readAsDataURL(file);
-    });
-  }
-
-  // --- LOAD BY USERNAME ---
-  const usernameBtn = document.getElementById("loadUsernameBtn");
-  if (usernameBtn) {
-    usernameBtn.addEventListener("click", () => {
-      const input = document.getElementById("usernameInput");
-      const name = input?.value.trim();
-      if (!name) return;
-
+    const reader = new FileReader();
+    reader.onload = (ev) => {
       const img = new Image();
-      img.crossOrigin = "anonymous";
-      img.onload = () => {
-        baseSkinImg = img;
-        if (statusText) statusText.textContent = "Skin loaded — choose an outfit.";
-        renderCanvas();
-      };
-      img.src = "https://minotar.net/skin/" + encodeURIComponent(name);
-    });
-  }
+      img.onload = () => { baseSkinImg = img; renderCanvas(); };
+      img.src = ev.target.result;
+    };
+    reader.readAsDataURL(file);
+  });
 
-  // --- OUTFIT SELECTION ---
+  // --- LOAD USERNAME ---
+  document.getElementById("loadUsernameBtn")?.addEventListener("click", () => {
+    const name = document.getElementById("usernameInput").value.trim();
+    if (!name) return;
+
+    const img = new Image();
+    img.crossOrigin = "anonymous";
+    img.onload = () => { baseSkinImg = img; renderCanvas(); };
+    img.src = "https://minotar.net/skin/" + encodeURIComponent(name);
+  });
+
+  // --- OUTFITS ---
   outfitButtons.forEach((btn) => {
     btn.addEventListener("click", () => {
-      outfitButtons.forEach((b) => b.classList.remove("active"));
+      outfitButtons.forEach(b => b.classList.remove("active"));
       btn.classList.add("active");
 
-      const src = btn.dataset.outfit;
-      if (!src) return;
-
       const img = new Image();
-      img.onload = () => {
-        outfitImg = img;
-        renderCanvas();
-      };
-      img.src = src;
+      img.onload = () => { outfitImg = img; renderCanvas(); };
+      img.src = btn.dataset.outfit;
     });
   });
 
-  // --- MODEL TOGGLE (Steve / Slim) ---
+  // --- MODEL SWITCH ---
   modelButtons.forEach((btn) => {
     btn.addEventListener("click", () => {
-      modelButtons.forEach((b) => b.classList.remove("active"));
+      modelButtons.forEach(b => b.classList.remove("active"));
       btn.classList.add("active");
 
-      currentModel = btn.dataset.model || "default";
-
-      if (baseSkinImg) {
-        viewer.loadSkin(canvas.toDataURL("image/png"), { model: currentModel });
-      }
+      currentModel = btn.dataset.model;
+      if (baseSkinImg) viewer.loadSkin(canvas.toDataURL("image/png"), { model: currentModel });
     });
   });
 
   // --- DOWNLOAD ---
-  if (downloadBtn) {
-    downloadBtn.addEventListener("click", () => {
-      if (!baseSkinImg) return;
-      const a = document.createElement("a");
-      a.href = canvas.toDataURL("image/png");
-      a.download = "probending_skin.png";
-      a.click();
-    });
-  }
+  downloadBtn?.addEventListener("click", () => {
+    const a = document.createElement("a");
+    a.href = canvas.toDataURL("image/png");
+    a.download = "probending_skin.png";
+    a.click();
+  });
+
 });
 </script>
+
+</body>
+</html>
