--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   .outfit-btn.active, .toggle-btn.active { background:#008cff; }
 </style>
 
-<script src="https://unpkg.com/skinview3d@3.0.0/dist/skinview3d.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/skinview3d@3.0.0/bundles/skinview3d.bundle.js"></script>
 </head>
 
 <body>
