--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
 <meta charset="UTF-8" />
 <title>Probending Wardrobe</title>
+  <!-- SkinView3D CDN fallback chain -->
+<script src="https://cdn.jsdelivr.net/npm/skinview3d@3.0.0/bundles/skinview3d.bundle.js"></script>
+<script src="https://unpkg.com/skinview3d@3.0.0/dist/skinview3d.bundle.js"></script>
+<script src="https://rawcdn.githack.com/bs-community/skinview3d/3.0.0/bundles/skinview3d.bundle.js"></script>
 <style>
   body { font-family: Arial; background:#111; color:white; margin:0; padding:20px; }
   .container { max-width:900px; margin:auto; }
